# call-me-maybe

./: Makefile  README.md  note.txt  pyproject.toml  test  test.py
data/input/: Makefile  function_calling_tests.json  functions_definition.json
data/output/: function_calls.json
src/: __main__.py  found_parameters.py  main.py  models.py  parser.py  read_vocab.py  start.py  state_machine.py  valid_prompt.py  write_output.py
src/call_me_maybe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
