[project]
name = "call_me_maybe"
version = "1.0.0"
description = ""
authors = [
    { name = "khnoman" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0.0",
    "requests>=2.32.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

